-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 23, 24
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8353594 | 21.0.8-oracle | Coleen Phillimore | P4 | Resolved | Fixed | b02 |
| JDK-8352286 | 21.0.8 | Satyen Subramaniam | P4 | Resolved | Fixed | b01 |
When nodes in the ConcurrentHashTable get corrupted and their hash codes don't match, resizing fails with an unhelpful message. See linked bug for details.
- backported by
-
JDK-8352286 Give better error for ConcurrentHashTable corruption
-
- Resolved
-
-
JDK-8353594 Give better error for ConcurrentHashTable corruption
-
- Resolved
-
- relates to
-
JDK-8333356 JVM crashes with "aux_index does not match even or odd indices"
-
- Open
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/544b111e
-
Commit(master)
openjdk/jdk/069e0ea6
-
Review(master)
openjdk/jdk21u-dev/1498
-
Review(master)
openjdk/jdk/20503
(2 links to)