8338064: Give better error for ConcurrentHashTable corruption

Reviewed-by: dholmes, shade